refactor(paper): ⚡ bolt: cache enum values to prevent array allocations
- Changed cached `VALUES` field from an array to an explicitly wrapped `Collections.unmodifiableList()` to satisfy SonarCloud S2386.
- Added comprehensive unit tests for Enums to satisfy SonarCloud 80% coverage on new code requirement.
- Updated `RPStats` and commands to iterate over the cached list instead of allocating a new array.